<resources>
    <string name="app_name">coursework2</string>
    <string name="title_activity_data_view">DataView</string>
    <string name="add_geofence_string">Add Geofence</string>
    <string name="edit_geofence_string">Edit Geofence</string>
    <string name="delete_geofence_string">Delete Geofence</string>
    <string name="geofence_name_string">Geofence Name</string>
    <!-- Strings used for fragments for navigation -->
    <string name="first_fragment_label">First Fragment</string>
    <string name="second_fragment_label">Second Fragment</string>
    <string name="next">Next</string>
    <string name="previous">Previous</string>
    <string-array name="geofence_classifications">
        <item>Neutral</item>
        <item>Good</item>
        <item>Bad</item>
    </string-array>

    <string name="delete_journey_string">Delete Journey</string>
    <string name="edit_journey_string">Edit Journey</string>
    <string name="enter_name_string">Enter Name</string>
    <string name="walk_string">Walk</string>
    <string name="run_string">Run</string>
    <string name="cycle_string">Cycle</string>
    <string name="close_dialog_string">Close Dialog</string>
    <string name="location_note_string">Note for this location</string>
    <string name="classification_string">Classification:</string>
    <string name="show_details_string">Show Details</string>

    <string name="journey_note_hint">Journey Note</string>
    <string name="start_string">Start</string>
    <string name="end_string">End</string>
    <string name="journey_name_string">Journey Name</string>
    <string name="journey_text_string">Enter name of the journey:</string>
    <string name="journey_note_string">Add a note about the journey:</string>
    <string name="enter_note_string">Enter Note</string>

    <string name="year_string">Year</string>
    <string name="month_string">Month</string>
    <string name="week_string">Week</string>
    <string name="day_string">Day</string>
    <string name="total_string">Total</string>
    <string name="all_string">All</string>
    <string name="previous_travels_string">View All Previous Travels</string>




    <string name="pref_location_accuracy_key">location_accuracy_preference</string>
    <string name="pref_location_accuracy_title">Location Accuracy</string>
    <string name="pref_location_accuracy_summary">Select the desired location accuracy.</string>
    <string name="pref_location_accuracy_dialog_title">Select Location Accuracy</string>
    <string name="pref_location_accuracy_default">2</string>

    <string name="pref_unit_system_key">distance_unit_preference</string>
    <string name="pref_unit_system_title">Unit Preference</string>
    <string name="pref_unit_system_summary">Select the preferred unit for distance.</string>
    <string name="pref_unit_system_dialog_title">Select Unit</string>
    <string name="pref_unit_system_default">1</string>

    <string name="pref_update_periods_key">update_periods_preference</string>
    <string name="pref_update_periods_title">Update Periods</string>
    <string name="pref_update_periods_summary">Choose how often updates should occur based on distance moved.</string>
    <string name="pref_update_periods_dialog_title">Select Update Periods</string>
    <string name="pref_update_periods_default">1</string>

    <string name="pref_tracking_key">tracking_preference</string>
    <string name="pref_tracking_title">Journey Tracking</string>
    <string name="pref_tracking_summary">Choose whether to continue tracking a journey when app is fully closed</string>
    <string name="pref_tracking_dialog_title">Select Tracking Preference</string>
    <string name="pref_tracking_default">1</string>

    <string-array name="location_accuracy_options">
        <item>High Accuracy</item>
        <item>Balanced</item>
        <item>Power Saving</item>
    </string-array>

    <string-array name="location_accuracy_values">
        <item>high</item>
        <item>balanced</item>
        <item>low</item>
    </string-array>

    <string-array name="unit_system_options">
        <item>Metric</item>
        <item>Imperial</item>
    </string-array>

    <string-array name="unit_system_values">
        <item>metric</item>
        <item>imperial</item>
    </string-array>

    <string-array name="update_periods_options">
        <item>Low (10 m)</item>
        <item>Medium (25 m)</item>
        <item>High (50 m)</item>
    </string-array>

    <string-array name="update_periods_values">
        <item>low</item>
        <item>medium</item>
        <item>high</item>
    </string-array>

    <string-array name="tracking_options">
        <item>Track when fully closed</item>
        <item>Stop tracking when fully closed</item>
    </string-array>

    <string-array name="tracking_values">
        <item>track</item>
        <item>stop</item>
    </string-array>


</resources>