<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:app="http://schemas.android.com/apk/res-auto">

    <!-- Location Accuracy Preference -->
    <ListPreference
        app:key="@string/pref_location_accuracy_key"
        app:title="@string/pref_location_accuracy_title"
        app:summary="@string/pref_location_accuracy_summary"
        app:dialogTitle="@string/pref_location_accuracy_dialog_title"
        app:entries="@array/location_accuracy_options"
        app:entryValues="@array/location_accuracy_values"
        app:defaultValue="@string/pref_location_accuracy_default" />

    <!-- Unit System Preference -->
    <ListPreference
        app:key="@string/pref_unit_system_key"
        app:title="@string/pref_unit_system_title"
        app:summary="@string/pref_unit_system_summary"
        app:dialogTitle="@string/pref_unit_system_dialog_title"
        app:entries="@array/unit_system_options"
        app:entryValues="@array/unit_system_values"
        app:defaultValue="@string/pref_unit_system_default" />

    <!-- Update Periods Preference -->
    <ListPreference
        app:key="@string/pref_update_periods_key"
        app:title="@string/pref_update_periods_title"
        app:summary="@string/pref_update_periods_summary"
        app:dialogTitle="@string/pref_update_periods_dialog_title"
        app:entries="@array/update_periods_options"
        app:entryValues="@array/update_periods_values"
        app:defaultValue="@string/pref_update_periods_default" />

</PreferenceScreen>
