<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:padding="16dp">

    <EditText
        android:id="@+id/geofenceNameEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/geofence_name_string"/>

    <EditText
        android:id="@+id/geofenceNoteEditText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/location_note_string"
        android:paddingTop="8dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="8dp"
        android:text="@string/classification_string"/>
    <Spinner
        android:id="@+id/geofenceClassificationSpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="8dp"
        android:entries="@array/geofence_classifications" />

</LinearLayout>