<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

<data>
    <variable
        name="viewModel"
        type="com.psyjg14.coursework2.viewmodel.ViewDataViewModel" />

    <variable
        name="navBarManager"
        type="com.psyjg14.coursework2.model.NavBarManager" />
</data>

<androidx.constraintlayout.widget.ConstraintLayout
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".view.ViewDataActivity">

    <!-- Statistics Section -->
    <TextView
        android:id="@+id/textDistance"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{viewModel.distanceTravelled}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textTime"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{viewModel.timeTaken}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textDistance" />

    <TextView
        android:id="@+id/textSessions"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@{viewModel.numOfSessions}"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textTime" />

    <!-- Filter Section -->
    <RadioGroup
        android:id="@+id/timeRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onCheckedChanged="@{(group, checkedId) -> viewModel.onRadioButtonPressed(group, checkedId)}"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/textSessions">

        <RadioButton
            android:id="@+id/yearButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/year_string" />

        <RadioButton
            android:id="@+id/monthButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/month_string" />

        <RadioButton
            android:id="@+id/weekButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/week_string" />

        <RadioButton
            android:id="@+id/dayButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/day_string" />

        <RadioButton
            android:id="@+id/totalButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/total_string" />

    </RadioGroup>

    <RadioGroup
        android:id="@+id/typeRadioGroup"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:onCheckedChanged="@{(group, checkedId) -> viewModel.onRadioButtonPressed(group, checkedId)}"
        android:orientation="horizontal"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/timeRadioGroup"
>

        <RadioButton
            android:id="@+id/walkButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/walk_string" />

        <RadioButton
            android:id="@+id/runButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/run_string" />

        <RadioButton
            android:id="@+id/cycleButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/cycle_string" />

        <RadioButton
            android:id="@+id/allButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:checked="true"
            android:text="@string/all_string" />


    </RadioGroup>
    <FrameLayout
        android:layout_width="414dp"
        android:layout_height="466dp"
        android:layout_weight="1"
        app:layout_constraintBottom_toTopOf="@+id/btnViewAllTravels"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/typeRadioGroup"
        app:layout_constraintVertical_bias="0.0">

        <fragment
            android:id="@+id/dataMap"
            android:name="com.google.android.gms.maps.SupportMapFragment"
            android:layout_width="match_parent"
            android:layout_height="464dp" />

    </FrameLayout>

    <Button
        android:id="@+id/btnViewAllTravels"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="4dp"
        android:background="?attr/colorPrimary"
        android:onClick="viewAllTravels"
        android:text="@string/previous_travels_string"
        android:textColor="@android:color/white"
        app:layout_constraintBottom_toTopOf="@+id/dataNavBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="1.0"
        app:layout_constraintStart_toStartOf="parent" />

    <com.google.android.material.bottomnavigation.BottomNavigationView
        android:id="@+id/dataNavBar"
        style="@style/Widget.MaterialComponents.BottomNavigationView.Colored"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:menu="@menu/navbar_menu" />

</androidx.constraintlayout.widget.ConstraintLayout>
</layout>

