<layout xmlns:android="http://schemas.android.com/apk/res/android">

    <data>
        <variable
            name="geofence"
            type="com.psyjg14.coursework2.database.entities.GeofenceEntity" />
    </data>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <!-- Close Button -->
        <ImageView
            android:id="@+id/closeDialogButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_close_clear_cancel"
            android:layout_alignParentEnd="true"
            android:layout_margin="16dp"
            android:background="?android:selectableItemBackground"
            android:contentDescription="@string/close_dialog_string"/>

        <!-- Geofence Name -->
        <TextView
            android:id="@+id/geofenceNameTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_toStartOf="@id/closeDialogButton"
            android:layout_alignTop="@id/closeDialogButton"
            android:textSize="18sp"
            android:textStyle="bold"
            android:padding="16dp"
            android:text="@{geofence.name}" />

        <!-- Geofence Classification -->
        <TextView
            android:id="@+id/geofenceClassificationTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/geofenceNameTextView"
            android:textSize="16sp"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:text="@{geofence.classification}" />

        <!-- Linear Layout for Buttons -->
        <LinearLayout
            android:id="@+id/buttonLinearLayout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="horizontal"
            android:layout_below="@id/geofenceNoteTextView">

            <Button
                android:id="@+id/deleteGeofenceButton"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:layout_margin="8dp"
                android:text="@string/delete_geofence_string"
                android:textColor="@android:color/white" />

            <Space
                android:layout_width="10dp"
                android:layout_height="0dp"></Space>

            <Button
                android:id="@+id/editGeofenceButton"
                android:layout_margin="8dp"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1"
                android:text="@string/edit_geofence_string"
                android:textColor="@android:color/white" />
        </LinearLayout>

        <!-- Geofence Note -->
        <TextView
            android:id="@+id/geofenceNoteTextView"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/geofenceClassificationTextView"
            android:paddingStart="16dp"
            android:paddingEnd="16dp"
            android:paddingBottom="16dp"
            android:text="@{geofence.geofenceNote}"
            android:textSize="16sp" />
    </RelativeLayout>
</layout>
